cmake_minimum_required(VERSION 3.0.0)
project(MAIN_GL)
set(CMAKE_CXX_STANDARD 11)
set(GLAD_H /Users/raphaelhaddad/Documents/Tsinghua/Semester_2/Computer_Graphics/OpenGL/glad/include)
set(GLFW_H /Users/raphaelhaddad/Documents/Tsinghua/Semester_2/Computer_Graphics/OpenGL/glfw-3.4.bin.MACOS/include)
find_package(Freetype REQUIRED)
include_directories(${GLAD_H} ${GLFW_H} ${FREETYPE_INCLUDE_DIRS})
set(GLFW_LINK /Users/raphaelhaddad/Documents/Tsinghua/Semester_2/Computer_Graphics/OpenGL/glfw-3.4.bin.MACOS/lib-universal/libglfw.3.dylib)
link_libraries(${GLFW_LINK})
set(SOURCE_MAIN ./main.cpp)
set(SOURCE_GLAD /Users/raphaelhaddad/Documents/Tsinghua/Semester_2/Computer_Graphics/OpenGL/glad/src/glad.c)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR})
add_executable(main ${SOURCE_MAIN} ${SOURCE_GLAD})
if (APPLE)
    find_package(glm CONFIG REQUIRED)
target_link_libraries(main PRIVATE "-framework OpenGL" glm::glm ${FREETYPE_LIBRARIES})
endif()
include(CTest)
enable_testing()
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
